feat: update code

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "3rdparty/CuteLogger"]
 	path = 3rdparty/CuteLogger
 	url = https://github.com/kevinlq/CuteLogger.git
+	branch = dev
 [submodule "3rdparty/qsyncable"]
 	path = 3rdparty/qsyncable
 	url = https://github.com/kevinlq/qsyncable.git
+	branch = dev
